syntax= "proto3";

message Cashflow {
    double interest_amount= 1;
    double principal_amount= 2;
    int64 date= 3;
}

message AccountWithCashflows{
    string bill_id= 1;
    string client_id= 2;
    string clients_name= 3;
    string lbm_gl= 4;
    string prod_cd= 5;
    double bal= 6;
    string curr= 7;
    double bal_lcy= 8;
    int64 open_dt= 9;
    int64 mat_dt= 10;
    string int_type= 11;
    double int_rt= 12;
    int64 next_rep_dt= 13;
    int64 last_rep_dt= 14;
    string rep_freq= 15;
    string benchmark= 16;
    string cust_class= 17;
    string npa_class= 18;
    int64 ason= 19;
    string client_type= 20;
    string clients_name1= 21;
    string clients_bsr_type_flg= 22;
    string clients_busdivn_code= 23;
    string clients_const_code= 24;
    string clients_pan_gir_num= 25;
    string clients_risk_categorization= 26;
    string clients_risk_cntry= 27;
    string clients_segment_code= 28;
    string corpcl_orgn_qualifier= 29;
    string corpcl_indus_code= 30;
    string corpcl_nature_of_bus1= 31;
    string corpcl_nature_of_bus2= 32;
    string corpcl_nature_of_bus3= 33;
    string corpcl_central_state_flg= 34;
    string corpcl_public_sector_flg= 35;
    string corpcl_primary_dlr_flg= 36;
    string corpcl_multilateral_bank= 37;
    string corpcl_connp_inv_num= 38;
    double corpcl_bc_gross_turnover= 39;
    string w4b_cd= 40;
    string balm_llg= 41;
    string care_llg= 42;
    string ba_llg= 43;
    string asset_code= 44;
    int64 npa_dt= 45;
    double account_balance= 46;
    double pwo= 47;
    int64 written_off_dt= 48;
    double ho_balance= 49;
    double npa_provision= 50;
    double ho_provision= 51;
    double suspencebalance= 52;
    double suspence_writeoff= 53;
    double ho_suspence= 54;
    double claim= 55;
    double primary= 56;
    double collateral= 57;
    double total_security= 58;
    int64 primary_valuation_dt= 59;
    int64 collateral_valuation_dt= 60;
    double gold_deficit= 61;
    double fraud= 62;
    double wilful_default= 63;
    double subsidy= 64;
    string priority= 65;
    string priority_type= 66;
    string main_sector= 67;
    string sub_sector= 68;
    string activity= 69;
    string industry= 70;
    string categoryofborrower= 71;
    string org_gl_head= 72;
    double npa_amt= 73;
    int64 sanc_dt= 74;
    string occp_cd= 75;
    string sens_sec= 76;
    string prior_subtype= 77;
    string restruct_flag= 78;
    int64 restruct_dt= 79;
    string mor_prd= 80;
    string rating= 81;
    string consitin= 82;
    string pan= 83;
    double limit_amt= 84;
    double gross_adv= 85;
    double exp_amt= 86;
    double unvail_amt= 87;
    double gold_gram= 88;
    string fund_flag= 89;
    double ltv_value= 90;
    int64 pt_i64_1= 91;
    int64 pt_i64_2= 92;
    int64 pt_i64_3= 93;
    int64 pt_i64_4= 94;
    int64 pt_i64_5= 95;
    double pt_f64_1= 96;
    double pt_f64_2= 97;
    double pt_f64_3= 98;
    double pt_f64_4= 99;
    double pt_f64_5= 100;
    string clients_group_code= 101;
    string class1= 102;
    string class2= 103;
    string class3= 104;
    string actual_cust_care_value= 105;
    string actual_acc_care_value= 106;
    string int_benchmark= 107;
    string bank_name= 108;
    string cet= 109;
    double tot_prin_amt= 110;
    double tot_int_amt= 111;
    repeated Cashflow cashflows= 112;
}
