syntax="proto3";
message Cashflow{
   double int_amt = 1;
   double prin_amt = 2;
   int64 date = 3;
}
message AccountWithCashflows{
   string deal_no = 1;
   string portfolio = 2;
   string instrument_id = 3;
   string instrument_type = 4;
   string isin_code = 5;
   string security_name = 6;
   double face_value = 7;
   double book_value = 8;
   double market_value = 9;
   string currency = 10;
   int64 mtm = 11;
   double yeild = 12;
   int64 maturity_date = 13;
   string coupon_classification_1 = 14;
   double coupon_rate = 15;
   double face_value_perunits = 16;
   double quantity = 17;
   string appreciation = 18;
   string depreciation = 19;
   string net_appreciation_depreciation = 20;
   string amortisation_asondate = 21;
   int64 accounted_amortisation = 22;
   int64 unaccounted_amortisation = 23;
   double accured_interest = 24;
   string coupon_frequency = 25;
   string coupon_basis = 26;
   string category = 27;
   string sub_category = 28;
   string put_date = 29;
   string call_date = 30;
   string last_coupon = 31;
   int64 next_coupon = 32;
   int64 issue_date = 33;
   string last_repricing_date = 34;
   string next_repricing_date = 35;
   string place = 36;
   string country = 37;
   string slr_nonslr = 38;
   string listed = 39;
   string issuer_id = 40;
   string issuer_name = 41;
   string external_rating_agency = 42;
   string external_rating = 43;
   string market = 44;
   string asset_classification = 45;
   string guarantor = 46;
   string industry = 47;
   string sub_industry = 48;
   string npa_classification = 49;
   string  deal_value_date = 50;
   string m_duration = 51;
   string treasury_gl_code = 52;
repeated Cashflow cashflows = 53;
}